configuration/ingress/default-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: kube-system
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    name: default-http-backend
