configuration/ingress/nginx-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-svc
  namespace: kube-system
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: '443,5000'
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: 'arn:aws:acm:us-east-1:809850405204:certificate/1b3b2802-79bb-44f2-923c-5b7b37ec90eb'
spec:
  type: LoadBalancer
  selector:
    name: nginx-ingress-lb
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80

  - name: https
    port: 443
    protocol: TCP
    targetPort: 80

  - name: registry
    port: 5000
    protocol: TCP
    targetPort: 5000
